--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ably/chat": "^0.4.0",
+    "@prisma/client": "^6.5.0",
     "@tailwindcss/postcss": "^4.0.12",
+    "ably": "^2.6.3",
+    "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.483.0",
     "next": "15.2.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
@@ -18,11 +24,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
+    "prisma": "^6.5.0",
     "typescript": "^5"
   }
 }
