--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "dependencies": {
     "@ably/chat": "^0.4.0",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@tailwindcss/postcss": "^4.0.12",
     "ably": "^2.6.3",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.483.0",
     "next": "15.2.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.12"
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss": "^4.0.12",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
