--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.1",
     "postcss": "^8.5.3",
